fix yc-alert z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -322,12 +322,12 @@ input:not([type='radio']),
 	justify-content: center;
 	box-shadow: var(--yc-primary-shadow);
 	opacity: 0;
-	z-index: 2147483647;
+	z-index: 999;
 	transform: translateY(100%);
 
 	&.show {
 		opacity: 1;
-		z-index: 2147483647;
+		z-index: 999;
 		transform: none;
 	}
 }
